# Omega_FusionCore_Proxmox

./:    .gitignore  .~lock.README.md#  Cargo.toml  Makefile  README.md  create-omega-vm-proxy.sh  generate-proxy-cert-1.sh  qemu-upstream
controller/: pyproject.toml  requirements.txt
controller/controller/: __init__.py  admission.py  cluster.py  cpu_admission.py  cpu_cgroup_monitor.py  gpu_admission.py  gpu_global.py  lxc_monitor.py  main.py  metrics.py  migration_daemon.py  migration_policy.py  placement.py  policy.py  proxmox.py  resilient_collector.py  rust_policy.py  store_client.py  topology_placement.py
controller/omega_controller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
controller/tests/: test_admission.py  test_benchmarks.py  test_cpu_admission.py  test_cpu_cgroup.py  test_gpu_admission.py  test_gpu_global.py  test_lxc_monitor.py  test_main.py  test_metrics.py  test_migration_policy.py  test_placement.py  test_policy.py  test_proxmox.py  test_resilient_collector.py  test_topology_placement.py
docs/: .~lock.GUIDE_COMPLET.md#  .~lock.architecture.md#  .~lock.cluster-kvm.md#  .~lock.deploiement.md#  .~lock.developpement-et-deploiement.md#  .~lock.experiments.md#  .~lock.guide-test-et-depannage-complet.md#  .~lock.installation.md#  GPU-usage-et-session-2026-06-30.md  GUIDE_COMPLET.md  PLAN_TESTS.md  SCENARIOS.md  TEST_SCENARIOS.md  VALIDATION_DATACENTER.md  architecture-reseau.md  architecture.md  cluster-kvm.md  cluster-physique.md  cluster-setup-complet.md  deploiement.md  developpement-et-deploiement.md  experiments.md  fonctionnement-complet.md  gpu-guide-complet.md  gpu-proxy-applicatif.md  gpu-utilisation.md  guide-test-et-depannage-complet.md  installation.md  lancer-les-tests.md  metrics.md  plan-network-cellule-adapte.md  preparation-image-vm.md  projet.md  protocol.md  qga-watchdog.md  retour-experience-cluster-reel.md  stockage-archive-cluster.md  utilisation-kvm.md  utilisation-physique.md
node-a-agent/: Cargo.toml
node-a-agent/benches/: eviction_bench.rs
node-a-agent/src/: balloon.rs  clock_eviction.rs  cluster.rs  compaction.rs  config.rs  disk_scheduler.rs  gpu_placement.rs  gpu_scheduler.rs  lib.rs  main.rs  memory.rs  metrics.rs  metrics_server.rs  migration.rs  prefetch.rs  qemu_uffd.rs  remote.rs  replication.rs  shared_memory.rs  uffd.rs  uffd_pool.rs  vcpu_scheduler.rs
node-a-agent/tests/: integration_eviction.rs
node-bc-store/: Cargo.toml  build.rs
node-bc-store/benches/: store_bench.rs
node-bc-store/src/: ceph_store.rs  config.rs  hardware.rs  lib.rs  main.rs  metrics.rs  orphan_cleaner.rs  persistent_store.rs  protocol.rs  server.rs  status_server.rs  store.rs  tls.rs
omega-daemon/: Cargo.toml
omega-daemon/src/: balloon.rs  cgroup_cpu_monitor.rs  cluster_api.rs  config.rs  control_api.rs  cpu_cgroup.rs  disk_io_scheduler.rs  eviction_engine.rs  fault_bus.rs  gpu_drm_backend.rs  gpu_multiplexer.rs  gpu_protocol.rs  gpu_runtime.rs  gpu_virgl_bridge.rs  io_cgroup.rs  lib.rs  main.rs  node_state.rs  policy_engine.rs  qmp_vcpu.rs  quota.rs  store_server.rs  tls.rs  vcpu_scheduler.rs  vm_migration.rs  vm_tracker.rs
omega-gpu-proxy/: Cargo.toml
omega-gpu-proxy/src/: lib.rs  main.rs
omega-qemu-launcher/: Cargo.toml
omega-qemu-launcher/src/: main.rs
omega-uffd-bridge/: Makefile  bridge.c
reports/: omega-test-report-20260527-1401.md
scripts/: build-deb.sh  cluster.conf  collect_baseline.sh  create-infra-vms.sh  create-omega-vm-proxy.sh  create-omega-vm.sh  deploy-deb.sh  deploy.sh  dns-register.sh  gandal-central-access.sh  generate-proxy-cert.sh  grafana-dashboard.json  install-distribution-reconciler-remote.sh  install-netfix-reconciler-remote.sh  install-qga-watchdog-remote.sh  install-security-proxies-guest.sh  llm-access.sh  omega-auto-hook.sh  omega-distribution-reconciler.sh  omega-gpu-client.sh  omega-gpu-worker-app.py  omega-gpu-worker-cpu.py  omega-hook.pl  omega-lab.sh  omega-llm-access-reconciler.sh  omega-netfix-reconciler.sh  omega-proxmox-install.sh  omega-qga-watchdog.sh  prepare-omega-image.sh  prometheus-alerts.yml  provision-omega-vms-remote.sh  proxmox_hook.pl  proxy-domain.sh  repair-qga-vms-remote.sh  run_stress.sh  setup-network.sh  setup_qos.sh  setup_zswap.sh  show_meminfo.sh  show_pressure.sh  (+7 more)
scripts/systemd/: omega-agent@.service  omega-store.service
scripts/tests/: 00-unit-tests.sh  01-smoke-test.sh  02-replication.sh  03-failover.sh  04-eviction-daemon.sh  05-vcpu-elastic.sh  06-gpu-placement.sh  07-gpu-scheduler.sh  08-migration-ram.sh  09-orphan-cleaner.sh  10-multi-vm.sh  11-mixed-ram-cpu.sh  12-mixed-cpu-ram-migration.sh  13-mixed-gpu-cpu.sh  14-mixed-cluster-pressure.sh  15-mixed-live-migration-pressure.sh  16-mixed-burst-starts.sh  17-mixed-drain-node.sh  18-recall-lifo.sh  19-compaction.sh  20-prefetch-stride.sh  21-tls-tofu.sh  22-balloon-thinprov.sh  23-disk-io-scheduler.sh  24-install-doctor.sh  25-vm-network.sh  26-ceph-real.sh  27-gpu-real-render.sh  28-network-partition.sh  29-long-run-soak.sh  30-vm-conformity.sh  31-scale-vms.sh  32-gpu-proxy.sh  33-production-metrics.sh  34-gpu-placement-global.sh  35-gpu-network-fallback.sh  36-gpu-concurrency-cuda.sh  37-fleet-omega-power.sh  38-deb-install.sh  39-gpu-training-jupyter.sh  (+5 more)
tests/integration/: test_full_scenario.sh
tests/protocol/: test_protocol.py
