[package]
name        = "node-a-agent"
version     = "0.1.0"
edition     = "2021"
description = "Agent de paging distant côté nœud A — userfaultfd + client store"
authors     = ["omega-remote-paging contributors"]

[[bin]]
name = "node-a-agent"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
clap               = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
libc               = { workspace = true }
bytes              = { workspace = true }

# Partagé avec node-bc-store pour le protocole réseau
node-bc-store = { path = "../node-bc-store" }

[dev-dependencies]
tempfile = { workspace = true }
