[package]
name        = "omega-daemon"
version     = "0.4.0"
edition     = "2021"
description = "Daemon unifié multi-rôle — V4 omega-remote-paging (store + agent + cluster API)"
authors     = ["omega-remote-paging contributors"]

[[bin]]
name = "omega-daemon"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
clap               = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
libc               = { workspace = true }
dashmap            = { workspace = true }
bytes              = { workspace = true }
axum               = { workspace = true }
tower              = { workspace = true }
reqwest            = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
tokio-rustls       = { workspace = true }
rustls             = { workspace = true }
rustls-pemfile     = { workspace = true }
rcgen              = { workspace = true }
async-trait        = { workspace = true }
num_cpus           = { workspace = true }

# Réutilise le protocole TCP et le store de la V1
node-bc-store = { path = "../node-bc-store" }

[dev-dependencies]
tokio-test = "0.4"
tempfile   = { workspace = true }
