[package]
name = "omega-qemu-launcher"
version = "0.1.0"
edition = "2021"
description = "Orchestrateur local de la voie A: agent memfd + arguments QEMU omega"
authors = ["omega-remote-paging contributors"]

[[bin]]
name = "omega-qemu-launcher"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
tempfile = { workspace = true }
node-a-agent = { path = "../node-a-agent" }
